# nto_2023

./: README.md
1-offensive/CRYPTO-1/: 01f512e6-e437-40bb-8a6a-d31576abf83f_medium_task.sage  8cc2c71b-6aed-451b-b346-fa1bee0501a1_hashed.txt  README.md
1-offensive/CRYPTO-2/: README.md
1-offensive/CRYPTO-2/splo/: splo.py
1-offensive/CRYPTO-3/: README.md
1-offensive/CRYPTO-3/splo/: factorize.py  info.py  splo.py
1-offensive/PWN-1/: Dockerfile  README.md  docker-compose.yml
1-offensive/PWN-1/solve/: Makefile  micro  micro.asm  payload.py
1-offensive/PWN-2/: Dockerfile  README.md  docker-compose.yml
1-offensive/PWN-2/chall/: .gdb_history  notebook
1-offensive/PWN-2/solve/: .gdb_history  payload.py
1-offensive/PWN-3/: Dockerfile  README.md  docker-compose.yml
1-offensive/PWN-3/chall/: diary
1-offensive/PWN-3/solve/: diary.c  payload.py
1-offensive/REVERSE-1/: README.md  flag.txt
1-offensive/REVERSE-1/hello/: hello.cpp  hello.sln  hello.vcxproj
1-offensive/REVERSE-1/stub/: stub.ASM
1-offensive/REVERSE-2/: CMakeLists.txt  README.md  seductive.py
1-offensive/REVERSE-2/src/: consts.hpp  imports.hpp  interpreter.cpp  interpreter.hpp  main.cpp  smth.cpp  test.cpp
1-offensive/REVERSE-3/: README.md
1-offensive/REVERSE-3/server/: Dockerfile  (+6 more)
1-offensive/WEB-1/: Dockerfile  README.md  docker-compose.yml  flag.txt
1-offensive/WEB-2/: README.md  docker-compose.yml
1-offensive/WEB-3/: README.md  docker-compose.yml
2-forensic/: README.md
3-defence/: check.py
3-defence/checker/: Dockerfile  run.sh
3-defence/service/: docker-compose.yml
(+87 files in other folders)
